Get rid of FunctionalUtils.java