@@ -38,7 +38,6 @@ import java.util.function.Predicate;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-import jdk.jpackage.internal.util.function.FunctionalUtils;
 import jdk.jpackage.internal.util.function.ThrowingConsumer;
 import jdk.jpackage.internal.util.function.ThrowingFunction;
 import jdk.jpackage.internal.util.function.ThrowingRunnable;
@@ -333,28 +332,29 @@ final class TestInstance implements ThrowingRunnable {
     private final boolean dryRun;
     private final Path workDir;
 
-    private static final Set<Status> KEEP_WORK_DIR = FunctionalUtils.identity(
-            () -> {
-                final String propertyName = "keep-work-dir";
-                Set<String> keepWorkDir = TKit.tokenizeConfigProperty(
-                        propertyName);
-                if (keepWorkDir == null) {
-                    return Set.of(Status.Failed);
-                }
+    private static final Set<Status> KEEP_WORK_DIR;
 
-                Predicate<Set<String>> isOneOf = options -> {
-                    return !Collections.disjoint(keepWorkDir, options);
-                };
+    static {
+        final String propertyName = "keep-work-dir";
+        Set<String> keepWorkDir = TKit.tokenizeConfigProperty(
+                propertyName);
+        if (keepWorkDir == null) {
+            KEEP_WORK_DIR = Set.of(Status.Failed);
+        } else {
 
-                Set<Status> result = new HashSet<>();
-                if (isOneOf.test(Set.of("pass", "p"))) {
-                    result.add(Status.Passed);
-                }
-                if (isOneOf.test(Set.of("fail", "f"))) {
-                    result.add(Status.Failed);
-                }
+            Predicate<Set<String>> isOneOf = options -> {
+                return !Collections.disjoint(keepWorkDir, options);
+            };
 
-                return Collections.unmodifiableSet(result);
-            }).get();
+            Set<Status> result = new HashSet<>();
+            if (isOneOf.test(Set.of("pass", "p"))) {
+                result.add(Status.Passed);
+            }
+            if (isOneOf.test(Set.of("fail", "f"))) {
+                result.add(Status.Failed);
+            }
 
+            KEEP_WORK_DIR = Collections.unmodifiableSet(result);
+        }
+    }
 }
